--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,8 @@ a {
 
 .header {
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   justify-content: space-between;
   box-sizing: border-box;
   align-items: center;
@@ -26,6 +28,7 @@ a {
 }
 .header-menu {
   display: flex;
+  flex-wrap: wrap;
   gap: 40px;
 }
 .header-menu a {
@@ -33,4 +36,45 @@ a {
   padding: 16px 0px;
   color: #ffffff;
   font-size: 18px;
+  position: relative;
+}
+.header-menu a::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background-color: #ffffff;
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
+}
+.header-menu a:hover::after {
+  width: 100%;
+}
+
+@media (max-width: 800px) {
+  .header-menu {
+    gap: 20px;
+  }
+
+  .header-menu a {
+    background: #111;
+    padding: 12px 16px;
+    border-radius: 4px;
+  }
+  .header-menu a:hover {
+    background-color: #2e2e2e;
+  }
+  .header-menu a::after {
+    display: none;
+  }
+}
+@media (max-width: 600px) {
+  .header-menu {
+    gap: 12px;
+  }
+  .header-menu a {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
 }
