--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,7 +90,8 @@ img {
 /* Intro section */
 .intro-bg {
   background-color: #000000;
-  color: white;
+  color: #ffffff;
+  box-shadow: inset 0px -120px #ffffff;
 }
 .intro {
   display: grid;
@@ -105,7 +106,13 @@ img {
 }
 .intro-content {
   align-self: end;
-  padding-bottom: 80px;
+  padding-bottom: 200px;
+}
+
+.intro img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .intro h1 {
