--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+/* resets */
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
@@ -19,10 +20,11 @@ img {
   max-width: 100%;
   display: block;
 }
+/* ----------------- */
+/* header */
 .header-bg {
   background: #000000;
 }
-
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -60,7 +62,8 @@ img {
 .header-menu a:hover::after {
   width: 100%;
 }
-
+/* ----------------- */
+/* media header */
 @media (max-width: 800px) {
   .header-menu {
     gap: 20px;
@@ -87,6 +90,7 @@ img {
     font-size: 14px;
   }
 }
+/* ----------------- */
 /* Intro section */
 .intro-bg {
   background-color: #000000;
@@ -146,3 +150,45 @@ img {
 .intro a:hover {
   background: linear-gradient(#ffb60d, #e59317);
 }
+/* ----------------- */
+/* media button */
+@media (max-width: 600px) {
+  .intro a {
+    padding: 12px 16px;
+    font-size: 16px;
+  }
+}
+/* ----------------- */
+/* media intro */
+@media (max-width: 1200px) {
+  .intro h1 {
+    font-size: 48px;
+  }
+  .intro p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 800px) {
+  .intro-bg {
+    background: #111111;
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #ffffff;
+  }
+  .intro {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .intro-content {
+    padding-bottom: 0px;
+  }
+  .intro h1 {
+    font-size: 32px;
+    margin-bottom: 16px;
+  }
+  .intro img {
+    height: 300px;
+    width: 100%;
+  }
+}
+
+/* ----------------- */
