--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,194 +1,12 @@
-/* resets */
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-h1,
-ul,
-p {
-  margin: 0px;
-}
-ul {
-  padding: 0px;
-  list-style: none;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-}
-img {
-  max-width: 100%;
-  display: block;
-}
-/* ----------------- */
-/* header */
-.header-bg {
-  background: #000000;
-}
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
-  box-sizing: border-box;
-  align-items: center;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-.header-menu a {
-  display: inline-block;
-  padding: 16px 0px;
-  color: #ffffff;
-  font-size: 18px;
-  position: relative;
-}
-.header-menu a::after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 2px;
-  background-color: #ffffff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
-.header-menu a:hover::after {
-  width: 100%;
-}
-/* ----------------- */
-/* media header */
-@media (max-width: 800px) {
-  .header-menu {
-    gap: 20px;
-  }
+@import "./global/global.css";
+@import "./utilities/tipografy.css";
+@import "./utilities/colors.css";
+@import "./utilities/text-colors.css";
+@import "./utilities/bg-colors.css";
+@import "./global/header.css";
 
-  .header-menu a {
-    background: #111;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-  .header-menu a:hover {
-    background-color: #2e2e2e;
-  }
-  .header-menu a::after {
-    display: none;
-  }
-}
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 14px;
-  }
-}
-/* ----------------- */
-/* Intro section */
-.intro-bg {
-  background-color: #000000;
-  color: #ffffff;
-  box-shadow: inset 0px -120px #ffffff;
-}
-.intro {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.intro-content {
-  align-self: end;
-  padding-bottom: 200px;
-}
+/* Utilities */
+@import "./utilities/components.css";
 
-.intro img {
-  height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
-}
-
-.intro h1 {
-  margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-}
-.intro h1 span {
-  color: #ffbb00;
-}
-
-.intro p {
-  margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-}
-
-.intro a {
-  display: inline-block;
-  padding: 16px 32px;
-  background: linear-gradient(#ffbf00, #f2a50c);
-  border-radius: 4px;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
-  color: #332200;
-  font-size: 18px;
-  line-height: 1.33;
-  font-weight: bold;
-}
-.intro a:hover {
-  background: linear-gradient(#ffb60d, #e59317);
-}
-/* ----------------- */
-/* media button */
-@media (max-width: 600px) {
-  .intro a {
-    padding: 12px 16px;
-    font-size: 16px;
-  }
-}
-/* ----------------- */
-/* media intro */
-@media (max-width: 1200px) {
-  .intro h1 {
-    font-size: 48px;
-  }
-  .intro p {
-    font-size: 18px;
-  }
-}
-@media (max-width: 800px) {
-  .intro-bg {
-    background: #111111;
-    padding-top: 40px;
-    box-shadow: inset 0 -60px #ffffff;
-  }
-  .intro {
-    grid-template-columns: 1fr;
-    gap: 32px;
-  }
-  .intro-content {
-    padding-bottom: 0px;
-  }
-  .intro h1 {
-    font-size: 32px;
-    margin-bottom: 16px;
-  }
-  .intro img {
-    height: 300px;
-    width: 100%;
-  }
-}
-
-/* ----------------- */
+/* Home */
+@import "./home/intro.css";
