--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -7,10 +7,7 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
   color: #332200;
-  font-size: 18px;
-  line-height: 1.33;
-  font-family: "Poppins";
-  font-weight: 600;
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 .button:hover {
   background: linear-gradient(#ffb60d, #e59317);
@@ -22,7 +19,7 @@
 @media (max-width: 600px) {
   .button {
     padding: 12px 16px;
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
 
