--- a/src/css/utilities/tipografy.css
+++ b/src/css/utilities/tipografy.css
@@ -1,13 +1,66 @@
-.text-lg {
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: "Poppins";
-  font-weight: 600;
+.text-1xs {
+  font: 400 0.75rem/1.35 "Poppins", sans-serif;
+}
+.text-2xs {
+  font: 400 0.875rem/1.35 "Roboto", sans-serif;
+}
+.text-1s {
+  font: 400 1rem/1.5 "Poppins", sans-serif;
 }
 
-.text-md {
-  font-size: 24px;
-  line-height: 1.5;
-  font-family: "Roboto";
-  font-weight: 400;
+.text-2s {
+  font: 400 0.1rem/1.5 "Roboto", sans-serif;
+}
+
+.text-1m,
+.text-1mb {
+  font: 400 1.125rem/1.35 "Poppins", sans-serif;
+}
+
+.text-1mb {
+  font-weight: 600;
+}
+.text-2m {
+  font: 500 1.125rem/1.35 "Roboto", sans-serif;
+}
+.text-1l {
+  font: 400 1.5rem/1.5 "Poppins", sans-serif;
+}
+.text-2l,
+.text-2lb {
+  font: 600 4rem/1.125 "Poppins", sans-serif;
+}
+.text-2lb {
+  font-weight: 500;
+  letter-spacing: 0.015em;
+  text-transform: uppercase;
+}
+
+.text-1xl {
+  font: 600 2rem/1.25 "Poppins", sans-serif;
+}
+.text-2xl {
+  font: 500 2rem/1.25 "Roboto", sans-serif;
+}
+.text-1xxl {
+  font: 600 4rem/1.125 "Poppins", sans-serif;
+}
+
+@media (max-width: 1200px) {
+  .text-1xxl {
+    font-size: 3rem;
+  }
+  .text-2l,
+  .text-2lb {
+    font-size: 1.125rem;
+  }
+}
+@media (max-width: 800px) {
+  .text-1xxl {
+    font-size: 2rem;
+  }
+  .text-1xl,
+  .text-2xl {
+    font-size: 1.5rem;
+  }
 }
