--- a/src/css/global/global.css
+++ b/src/css/global/global.css
@@ -4,8 +4,12 @@ body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
   color: var(--black-50);
+  height: 3000px;
 }
 h1,
+h2,
+h3,
+h4,
 ul,
 p {
   margin: 0px;
@@ -21,6 +25,9 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
 
 /* ----------------- */
