--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -1,4 +1,12 @@
 /* button */
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding: 0px 20px 0px 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .button {
   display: inline-block;
   padding: 16px 32px;
