--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -23,7 +23,7 @@
 
 /* ----------------- */
 
-/* media query button */
+/* media */
 @media (max-width: 600px) {
   .button {
     padding: 12px 16px;
@@ -32,3 +32,22 @@
 }
 
 /* ----------------- */
+
+.general-link {
+  display: inline-block;
+  color: var(--yellow-1);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+
+.general-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+}
+
+.general-link:hover {
+  color: var(--white-100);
+}
