--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,7 @@
 /* Home */
 @import "./home/intro.css";
 @import "./home/technology.css";
+@import "./home/partners.css";
 
 /* Bikes */
 @import "./bikes/bikes-list.css"
