creation of the testimony section on index.html, and added new file testimony.css at home folder with his setups.

--- a/src/css/home/partners.css
+++ b/src/css/home/partners.css
@@ -40,6 +40,9 @@
   .partners {
     padding-bottom: 60px;
   }
+  .partners li {
+    padding: 30px;
+  }
   .partners h2 {
     margin-bottom: 20px;
   }
