--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,7 @@
 @import "./home/intro.css";
 @import "./home/technology.css";
 @import "./home/partners.css";
+@import "./home/testimony.css";
 
 /* Bikes */
 @import "./bikes/bikes-list.css"
