creation of the insurance article on index.html, and added new folder insurance on folder css with file insurance.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,4 +15,7 @@
 @import "./home/testimony.css";
 
 /* Bikes */
-@import "./bikes/bikes-list.css"
+@import "./bikes/bikes-list.css";
+
+/* Insurance */
+@import "./insurance/insurance.css";
