--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -16,11 +16,20 @@
   text-transform: uppercase;
   color: #332200;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  max-width: max-content;
 }
+
 .button:hover {
   background: linear-gradient(#ffb60d, #e59317);
 }
 
+.button.secondary {
+  background: var(--gray-10);
+  color: var(--gray-2);
+}
+.button.secondary:hover {
+  background: var(--gray-9);
+}
 /* ----------------- */
 
 /* media */
