creation of the footer on file index.html and added new file footer.css on folder global,I did make corrections on the padding property on file components.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,8 @@
 @import "./utilities/text-colors.css";
 @import "./utilities/bg-colors.css";
 @import "./global/header.css";
+@import "./global/footer.css";
+
 
 /* Utilities */
 @import "./utilities/components.css";
