--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -2,7 +2,8 @@
 .container {
   box-sizing: border-box;
   max-width: 1200px;
-  padding: 0px 20px 0px 20px;
+  padding-right: 20px;
+  padding-left: 20px;
   margin-left: auto;
   margin-right: auto;
 }
