creation of the page terms.html and your styles on folder terms in the file terms.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,6 @@
 @import "./global/header.css";
 @import "./global/footer.css";
 
-
 /* Utilities */
 @import "./utilities/components.css";
 
@@ -21,3 +20,6 @@
 
 /* Insurance */
 @import "./insurance/insurance.css";
+
+/* Terms */
+@import "./terms/terms.css";
