--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -61,3 +61,26 @@
 .general-link:hover {
   color: var(--white-100);
 }
+
+/* título das páginas internas */
+.title-bg {
+  background-color: var(--black-50);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.títle p {
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+  .title-bg {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .title p {
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
+}
