creation of the page bikes.html and your styles on folder bikes in the file bikes.css, importing bikes.css to styles.css and I made de quite bit correction in global.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,7 @@
 
 /* Bikes */
 @import "./bikes/bikes-list.css";
+@import "./bikes/bikes.css";
 
 /* Insurance */
 @import "./insurance/insurance.css";
