--- a/src/css/insurance/insurance.css
+++ b/src/css/insurance/insurance.css
@@ -10,6 +10,10 @@
   gap: 40px;
   align-items: center;
 }
+
+#insurance .insurance {
+  padding-top: 0px;
+}
 .insurance h2 {
   grid-column: 1/-1;
 }
@@ -19,6 +23,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 
 .insurance-item h3 {
