--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,8 @@
 
 /* Insurance */
 @import "./insurance/insurance.css";
+@import "./insurance/advantages.css";
+@import "./insurance/questions.css";
 
 /* Terms */
 @import "./terms/terms.css";
