creation of the page bikes.html and your styles bike.css on the folder bike,importing this files to main file style.css and some little corrections in bikes-list.css

--- a/src/css/bikes/bikes-list.css
+++ b/src/css/bikes/bikes-list.css
@@ -14,6 +14,9 @@
   margin-right: auto;
   overflow-x: auto;
 }
+#bike .bikes-models-list {
+  padding: 0px 0px 20px 0px;
+}
 .bikes-models-list li {
   min-width: 280px;
 }
