--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,9 @@
 @import "./bikes/bikes-list.css";
 @import "./bikes/bikes.css";
 
+/* Bike */
+@import "./bike/bike.css";
+
 /* Insurance */
 @import "./insurance/insurance.css";
 @import "./insurance/advantages.css";
