creation of the internal page of bikes on folder bikes  and your styles insurance-bikes.css on the folder bikes,importing this files to main file style.css.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,7 @@
 
 /* Bike */
 @import "./bike/bike.css";
+@import "./bike/insurance-bikes.css";
 
 /* Insurance */
 @import "./insurance/insurance.css";
