--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,7 @@
 
 /* Utilities */
 @import "./utilities/components.css";
+@import "./utilities/formulary.css";
 
 /* Home */
 @import "./home/intro.css";
@@ -27,6 +28,10 @@
 @import "./insurance/insurance.css";
 @import "./insurance/advantages.css";
 @import "./insurance/questions.css";
+
+/* Contact */
+@import "./contact/contact.css";
+@import "./contact/stores.css";
 
 /* Terms */
 @import "./terms/terms.css";
