--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,5 +33,8 @@
 @import "./contact/contact.css";
 @import "./contact/stores.css";
 
+/* Budget */
+@import "./budget/budget.css";
+
 /* Terms */
 @import "./terms/terms.css";
