Ended HTML & CSS

--- a/src/css/home/intro.css
+++ b/src/css/home/intro.css
@@ -1,6 +1,7 @@
 /* Intro */
 .intro-bg {
-  background-color: var(--black-100);
+  background: var(--black-100) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 160px left 20px;
   box-shadow: inset 0px -120px var(--white-100);
 }
 .intro {
