--- a/src/css/budget/budget.css
+++ b/src/css/budget/budget.css
@@ -33,7 +33,8 @@
 .budget-product {
   border-radius: 5px 0 0 5px;
   gap: 20px;
-  background: var(--black-100);
+  background: var(--black-100) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 20px left 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
@@ -106,7 +107,8 @@
 
 .budget-data {
   border-radius: 0 5px 5px 0;
-  background: var(--white-100);
+  background: var(--white-100) url("../../img/dec/bottom-right.svg") no-repeat
+    bottom 20px right 20px;
 }
 
 .budget-content {
@@ -163,14 +165,20 @@
   }
   .budget-product {
     border-radius: 5px 5px 0 0;
+    background: var(--black-100)
   }
   .budget-data {
     border-radius: 0 0 5px 5px;
   }
 }
+@media(max-width:600px){
+  .budget-data{
+    background: var(--white-100)
+  }
+}
 
-@media(max-width:400px){
-  .budget-product{
+@media (max-width: 400px) {
+  .budget-product {
     grid-template-columns: 1fr;
   }
 }
