--- a/src/css/contact/contact.css
+++ b/src/css/contact/contact.css
@@ -15,12 +15,14 @@
 
 .contact-data {
   border-radius: 5px 0 0 5px;
-  background: var(--black-100);
+  background: var(--black-100) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 20px left 20px;
 }
 
 .contact-formulary {
   border-radius: 0 5px 5px 0;
-  background: var(--white-100);
+  background: var(--white-100) url("../../img/dec/bottom-right.svg") no-repeat
+    bottom 20px right 20px;
 }
 
 .contact-data h2 {
@@ -76,6 +78,7 @@
 
   .contact-data {
     border-radius: 5px 5px 0 0;
+    background: var(--black-100);
   }
   .contact-formulary {
     border-radius: 0 0 5px 5px;
