--- a/src/css/home/testimony.css
+++ b/src/css/home/testimony.css
@@ -15,6 +15,8 @@
 .testimony-content {
   padding: 40px 40px 80px 80px;
   align-self: end;
+  background: url("../../img/dec/bottom-right-p.svg") no-repeat bottom 40px
+    right 40px;
 }
 
 .testimony-content p {
@@ -39,6 +41,12 @@
 }
 .testimony p::after {
   content: "”";
+}
+
+@media (min-width: 1200px) {
+  .testimony img {
+    max-height: 520px;
+  }
 }
 
 @media (max-width: 800px) {
