--- a/src/css/utilities/components.css
+++ b/src/css/utilities/components.css
@@ -88,6 +88,10 @@
   padding-bottom: 60px;
 }
 
+.title {
+  background: url("../../img/dec/top-right.svg") no-repeat top right 20px;
+}
+
 .títle p {
   margin-bottom: 4px;
 }
@@ -101,5 +105,11 @@
     font-size: 1rem;
     text-transform: lowercase;
     font-weight: 400;
+  }
+}
+
+@media (max-width: 600px) {
+  .title {
+    background: var(--black-50);
   }
 }
