Adding scripts and quite little corrections

--- a/src/css/insurance/questions.css
+++ b/src/css/insurance/questions.css
@@ -6,40 +6,53 @@
   margin-bottom: 60px;
 }
 .questions dl > div {
-  padding: 20px;
+  /* padding: 20px; */
   border-radius: 4px;
 }
 .questions dl > div:nth-child(odd) {
   background-color: var(--gray-1);
 }
-.questions dt {
+.questions button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  padding: 20px;
 }
-.questions dt::before {
-  content: "";
+.questions button::before {
+  content: '';
   display: inline-block;
   width: 12px;
   height: 8px;
   background-color: var(--yellow-1);
 }
-.questions dt::after {
-  content: "";
+.questions button::after {
+  content: '';
   display: inline-block;
   width: 14px;
   height: 6px;
-  background: url("../../img/icones/seta-abrir.svg");
+  background: url('../../img/icones/seta-abrir.svg');
   transition: 0.3s;
 }
-.questions dt:hover::after {
+.questions button:hover::after,
+.questions button[aria-expanded='true']::after {
   transform: rotate(180deg);
 }
 .questions dd {
+  display: none;
+}
+.questions dd.active {
+  display: block;
+}
+
+.questions dd {
   padding-left: 20px;
-  padding-top: 16px;
+  padding: 16px;
   max-width: 80ch;
 }
 /* media */
