--- a/src/css/global/header.css
+++ b/src/css/global/header.css
@@ -21,7 +21,7 @@
   position: relative;
 }
 .header-menu a::after {
-  content: "";
+  content: '';
   display: block;
   width: 0;
   height: 2px;
@@ -30,7 +30,8 @@
   transition: 0.3s;
   position: absolute;
 }
-.header-menu a:hover::after {
+.header-menu a:hover::after,
+.header-menu a.active::after {
   width: 100%;
 }
 
