Adding scripts to check if Javascript is active or not in the browser

--- a/src/css/insurance/questions.css
+++ b/src/css/insurance/questions.css
@@ -43,10 +43,10 @@
 .questions button[aria-expanded='true']::after {
   transform: rotate(180deg);
 }
-.questions dd {
+.js .questions dd {
   display: none;
 }
-.questions dd.active {
+.js .questions dd.active {
   display: block;
 }
 
